--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@types/three": "^0.167.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
     "framer-motion-3d": "^11.3.21",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.8",
+    "tailwind-merge": "^2.5.2",
     "three": "^0.167.1"
   },
   "devDependencies": {
