--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
@@ -17,6 +18,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
     "framer-motion-3d": "^11.3.21",
+    "lucide-react": "^0.441.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
