--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/three": "^0.163.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.3.21",
     "framer-motion-3d": "^11.3.21",
     "lucide-react": "^0.441.0",
