--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.3.21",
     "framer-motion-3d": "^11.3.21",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.441.0",
     "next": "14.2.5",
     "react": "^18",
