--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@libsql/client": "^0.14.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -34,6 +33,7 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.441.0",
     "next": "14.2.5",
+    "postgres": "^3.4.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
