--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.27.0",
     "sass": "^1.77.8",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
