--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
@@ -33,6 +34,7 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.441.0",
     "next": "14.2.5",
+    "payload": "^2.30.3",
     "postgres": "^3.4.5",
     "react": "^18",
     "react-dom": "^18",
