--- a/package.json
+++ b/package.json
@@ -16,16 +16,21 @@
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "@tiptap/extension-underline": "^2.9.1",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
     "@types/three": "^0.163.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.36.0",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
@@ -36,6 +41,7 @@
     "next": "14.2.5",
     "postgres": "^3.4.5",
     "react": "^18",
+    "react-day-picker": "^9.3.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "sass": "^1.77.8",
