--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.7.3",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
@@ -39,11 +40,13 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.441.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.10",
     "postgres": "^3.4.5",
     "react": "^18",
     "react-day-picker": "^9.3.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "resend": "4.0.1-alpha.0",
     "sass": "^1.77.8",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
