--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "drizzle-orm": "^0.36.0",
+    "drizzle-orm": "^0.36.4",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.3.21",
@@ -47,6 +47,7 @@
     "lucide-react": "^0.441.0",
     "next": "14.2.5",
     "next-auth": "^4.24.10",
+    "pg-core@latest": "link:drizzle-orm/pg-core@latest",
     "postgres": "^3.4.5",
     "react": "^18",
     "react-day-picker": "^9.3.0",
