--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.36.4",
     "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-fade": "^8.5.2",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.3.21",
     "framer-motion-3d": "^11.3.21",
